@@ -1,3 +1,13 @@
+2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b34
+
+ * FIX: Do not only accept $_POST and $_GET for $_REQUEST.
+
+ * Change: Added possibility to logout in various places.
+
+ * Fix: Add more security to user preferences dialog.
+
+ * Change: Code beautify ;-)
+
 2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b33
 
  * SECURITY BUGFIX *
